Update: build.cmd to pom